--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ronnelsanchez",
-  "version": "1.0.0",
-  "description": "Another rendition of my portfolio using VueJS, webpack, etc.",
-  "author": "Ronnel",
+  "version": "2.0.0",
+  "description": "Ronnel Sanchez | Portfolio",
+  "author": "Ronnel Sanchez",
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
